# containers

./: .gitignore  .gitmodules  README.md
.github/workflows/: publish.yml
images/aparent/: Dockerfile
images/beaver/: Dockerfile
images/intronic/: Dockerfile
images/join_junctions/: Dockerfile
images/repeat_filler/: Dockerfile
images/rsync_ssh/: Dockerfile
images/sed/: Dockerfile
images/spliceai/: Dockerfile
modules/aparent/py/: aparent.py
modules/aparent/rs/: Cargo.toml
modules/aparent/rs/src/: main.rs
modules/join_junctions/: join_junctions.py
modules/repeat_filler/: repeat_filler.py
modules/spliceai/py/: spliceai.py
modules/spliceai/rs/chunk/: Cargo.toml
modules/spliceai/rs/chunk/src/: cli.rs  core.rs  lib.rs  main.rs
modules/spliceai/rs/derive/: Cargo.toml
modules/spliceai/rs/derive/src/: annotation.rs  calibration.rs  cli.rs  genome.rs  lib.rs  main.rs  spliceai.rs  utils.rs
