[package]
name = "spliceai-chunk"
version = "0.0.2"
edition = "2021"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
description = "prepare 2bit for spliceai prediction"
keywords = ["spliceai", "2bit", "bioinformatics", "genome"]
homepage = "https://github.com/alejandrogzi/xiso"
repository = "https://github.com/alejandrogzi/xiso"
categories = ["command-line-utilities", "science"]

[dependencies]
dashmap = { version = "6.1.0", features = ["rayon"] }
clap = { version = "4.6", features = ["derive"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
log = "0.4"
simple_logger = "5.2.0"
twobit = "0.2.2"
flate2 = "1.1.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
